turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
		rule(state,getCouleurSol()) match {
                    ^Turmite:20: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,0,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:21: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:22: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,1,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:23: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:25: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,2,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:26: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:29: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,4,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:30: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:34: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
			case (_,8,_) => state = rule(state,getCouleurSol,2)
                                                    ^Turmite:35: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^